data/derived/sp14/progs/unify/prog3698.ml.out
Characters 54-55:
  wwhile (f, 2);;
          ^
Error: This expression has type int -> int * bool
       but an expression was expected of type int -> int * bool ref
       Type bool is not compatible with type bool ref 
